# index_checker

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
src/: database_module.rs  index_validation.rs  lib.rs  main.rs  parser.rs
src/model/: test_model.ts
src/parser/: AST.rs
test_node/: db_handler.ts  index.js  package.json
