[package]
name = "index_checker"
version = "0.1.0"
license = "ISC"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.1"
mysql = "*"
regex = "1.10.2"
serde = {version = "1.0.190", features = ["derive"]}
serde_json = "1.0.107"
dotenv = "0.15.0"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
